WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297075
Fonts located in application bundles should not be registered in the WebContent process
https://bugs.webkit.org/show_bug.cgi?id=297075
Summary
Fonts located in application bundles should not be registered in the WebConte...
Per Arne Vollan
Reported
2025-08-07 13:31:28 PDT
Fonts located in application bundles should not be registered in the WebContent process.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-07 13:31:46 PDT
<
rdar://problem/157780044
>
Per Arne Vollan
Comment 2
2025-08-07 13:35:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49080
EWS
Comment 3
2025-08-08 07:58:44 PDT
Committed
298392@main
(a64e710aae85): <
https://commits.webkit.org/298392@main
> Reviewed commits have been landed. Closing PR #49080 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug